Minor fixes to alignment

--- a/nfl-pro-temp/index.css
+++ b/nfl-pro-temp/index.css
@@ -58,9 +58,9 @@ body {
     font-size: 35px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-left: 215px;
+    margin-left: 235px;
     font-weight:bold;
-    margin-top: -15px;
+    margin-top: -63px;
 }
 
 .thursdayTitle{
@@ -68,7 +68,7 @@ body {
     font-size: 35px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    margin-left: 410px;
+    margin-left: 430px;
     font-weight:bold;
-    margin-top: -15px;
+    margin-top: -63px;
 }
